--- a/.gitignore
+++ b/.gitignore
@@ -21,25 +21,14 @@ eagle.epf
 # Ignore NuGet Packages
 *.nupkg
 
-# The packages folder can be ignored because of Package Restore
-**/[Pp]ackages/*
+# Ignore the NuGet packages folder in the root of the repository. If needed, prefix 'packages'
+# with additional folder names if it's not in the same folder as .tfignore.   
+packages
 
-# except build/, which is used as an MSBuild target.
-!**/[Pp]ackages/build/
-
-# Uncomment if necessary however generally it will be regenerated when needed
-#!**/[Pp]ackages/repositories.config
-
-# NuGet v3's project.json files produces more ignorable files
-*.nuget.props
-*.nuget.targets
-
-# Ignore other intermediate files that NuGet might create. project.lock.json is used in conjunction
-# with project.json (NuGet v3); project.assets.json is used in conjunction with the PackageReference
-# format (NuGet v4 and .NET Core).
+# Omit temporary files
 project.lock.json
 project.assets.json
-
+*.nuget.props
 
 
 # CAM files
