--- a/DevFramework/DevFramework.Core/DevFramework.Core.csproj
+++ b/DevFramework/DevFramework.Core/DevFramework.Core.csproj
@@ -74,6 +74,7 @@
     <Compile Include="DataAccess\IEntityRepository.cs" />
     <Compile Include="DataAccess\IQueryableRepository.cs" />
     <Compile Include="DataAccess\NHibernate\NHibernateHelper.cs" />
+    <Compile Include="DataAccess\NHibernate\NhQueryableRepository.cs" />
     <Compile Include="Entities\IEntity.cs" />
     <Compile Include="NhEntityRepositoryBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
