--- a/DevFramework/DevFramework.Northwind.Business/DevFramework.Northwind.Business.csproj
+++ b/DevFramework/DevFramework.Northwind.Business/DevFramework.Northwind.Business.csproj
@@ -50,7 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IProductService.cs" />
-    <Compile Include="Concrete\Managers\IProductManager.cs" />
+    <Compile Include="Concrete\Managers\ProductManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidationRules\FluentValidation\ProductValidator.cs" />
   </ItemGroup>
