--- a/DevFramework/DevFramework.Core/packages.config
+++ b/DevFramework/DevFramework.Core/packages.config
@@ -9,4 +9,5 @@
   <package id="PostSharp.Redist" version="6.9.4" targetFramework="net472" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net472" />
   <package id="Remotion.Linq.EagerFetching" version="2.2.0" targetFramework="net472" />
+  <package id="System.Text.RegularExpressions" version="4.3.1" targetFramework="net472" />
 </packages>
