--- a/DevFramework/DevFramework.Core/DevFramework.Core.csproj
+++ b/DevFramework/DevFramework.Core/DevFramework.Core.csproj
@@ -96,6 +96,7 @@
     <Compile Include="CrossCuttingConcerns\Caching\ICacheManager.cs" />
     <Compile Include="CrossCuttingConcerns\Caching\Microsoft\MemoryCacheManager.cs" />
     <Compile Include="CrossCuttingConcerns\Logging\Log4Net\JSonLayout.cs" />
+    <Compile Include="CrossCuttingConcerns\Logging\Log4Net\Layout\JsonLayout.cs" />
     <Compile Include="CrossCuttingConcerns\Logging\Log4Net\LoggerService.cs" />
     <Compile Include="CrossCuttingConcerns\Logging\Log4Net\Loggers\DatabaseLogger.cs" />
     <Compile Include="CrossCuttingConcerns\Logging\Log4Net\Loggers\FileLogger.cs" />
