--- a/DevFramework/DevFramework.Nortwind.MvcWebUI/Views/web.config
+++ b/DevFramework/DevFramework.Nortwind.MvcWebUI/Views/web.config
@@ -16,7 +16,7 @@
         <add namespace="System.Web.Mvc.Ajax" />
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
-        <add namespace="DevFramework.Northwind.Mvc.WebUI.Tests" />
+        <add namespace="DevFramework.Nortwind.MvcWebUI" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
@@ -27,7 +27,7 @@
 
   <system.webServer>
     <handlers>
-      <remove name="BlockViewHandler" />
+      <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
     </handlers>
   </system.webServer>
