--- a/DevFramework/DevFramework.Nortwind.MvcWebUI/DevFramework.Nortwind.MvcWebUI.vbproj
+++ b/DevFramework/DevFramework.Nortwind.MvcWebUI/DevFramework.Nortwind.MvcWebUI.vbproj
@@ -113,7 +113,9 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Controllers\ProductController.cs" />
     <Content Include="Global.asax" />
+    <Content Include="Models\ProductListViewModel.cs" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -171,8 +173,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\" />
-    <Folder Include="Models\" />
+    <Folder Include="Views\Product\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
