--- a/DevFramework/DevFramework.DataAccess.Tests/App.config
+++ b/DevFramework/DevFramework.DataAccess.Tests/App.config
@@ -5,10 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="NorthwindContext"
-      providerName="System.Data.SqlClient"
-      connectionString="Data Source=DESKTOP-2V8QO09\SQLEXPRESS;Initial Catalog=Northwind;
-    Integrated Security=True;MultipleActiveResultSets=True" />
+    <add name="NorthwindContext" providerName="System.Data.SqlClient" connectionString="Data Source=DESKTOP-2V8QO09\SQLEXPRESS;Initial Catalog=Northwind;     Integrated Security=True;MultipleActiveResultSets=True" />
   </connectionStrings>
 
   <entityFramework>
@@ -16,4 +13,16 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="System.Buffers" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.3.0" newVersion="4.0.3.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
