--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ packages
 # comment the following line if you want to have your project file included.
 eagle.epf
 
+# The packages folder can be ignored because of Package Restore
+**/packages/*
+
 .vs/
 
 # Autorouter files
