--- a/DevFramework/DevFramework.Northwind.Business/DevFramework.Northwind.Business.csproj
+++ b/DevFramework/DevFramework.Northwind.Business/DevFramework.Northwind.Business.csproj
@@ -66,7 +66,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstract\IProductService.cs" />
+    <Compile Include="Abstract\IUserService.cs" />
     <Compile Include="Concrete\Managers\ProductManager.cs" />
+    <Compile Include="Concrete\Managers\UserManager.cs" />
     <Compile Include="DependencyResolves\Ninject\BusinessModule.cs" />
     <Compile Include="DependencyResolves\Ninject\ValidationModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
