--- a/DevFramework/DevFramework.Northwind.Entities/DevFramework.Northwind.Entities.csproj
+++ b/DevFramework/DevFramework.Northwind.Entities/DevFramework.Northwind.Entities.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ComplexTypes\ProductDetail.cs" />
+    <Compile Include="ComplexTypes\UserRole.cs" />
     <Compile Include="Concrete\Category.cs" />
     <Compile Include="Concrete\Product.cs" />
     <Compile Include="Concrete\User.cs" />
