--- a/DevFramework/DevFramework.Northwind.WebApi/DevFramework.Northwind.WebApi.csproj
+++ b/DevFramework/DevFramework.Northwind.WebApi/DevFramework.Northwind.WebApi.csproj
@@ -113,6 +113,16 @@
     <Folder Include="Models\" />
     <Folder Include="Views\Products\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\DevFramework.Northwind.Business\DevFramework.Northwind.Business.csproj">
+      <Project>{D9880B7A-9239-4032-B27C-D613CE09E895}</Project>
+      <Name>DevFramework.Northwind.Business</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DevFramework.Northwind.Entities\DevFramework.Northwind.Entities.csproj">
+      <Project>{FEC28EF2-2AA7-4696-9015-EE92E7B95091}</Project>
+      <Name>DevFramework.Northwind.Entities</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
