--- a/DevFramework/DevFramework.Northwind.Business/DevFramework.Northwind.Business.csproj
+++ b/DevFramework/DevFramework.Northwind.Business/DevFramework.Northwind.Business.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Concrete\Managers\UserManager.cs" />
     <Compile Include="DependencyResolves\Ninject\AutoMapperModule.cs" />
     <Compile Include="DependencyResolves\Ninject\BusinessModule.cs" />
+    <Compile Include="DependencyResolves\Ninject\InstanceFactory.cs" />
     <Compile Include="DependencyResolves\Ninject\ValidationModule.cs" />
     <Compile Include="Mappings\AutoMapper\Profiles\BusinessProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
